--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -2,7 +2,7 @@
 section {
     height: 100%;
     color: #ccf2ff;
-    padding: 100px 380px 200px 380px;
+    padding: 120px 380px 400px 380px;
 }
 
 section > div > p {
@@ -17,6 +17,9 @@ section .heading {
 
 .name-section p {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    line-height: 2;
+    font-size: 20px;
+    text-align: left;
 }
 
 .name {
@@ -33,8 +36,18 @@ section .heading {
 
 .widthh {
     width: 566px;
+}
+
+.skills {
+    display: flex;
+    flex-direction: row;
+}
+
+.skills div {
+    padding: 0px 10px 10px 10px;
     font-size: 20px;
-    text-align: left;
+    width: 20%;
+    line-height: 2;
 }
 
 /*.scroll {*/
