--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -27,7 +27,7 @@ nav {
                 text-decoration: none;
                 text-transform: uppercase;
                 font-size: 14px;
-                color: white;
+                color: #80dfff;
                 letter-spacing: 0.5px;
                 height: 10px;
                 padding-left: 30px;
