--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -1,8 +1,14 @@
 
 section {
+    min-width: 800px;
     height: 100%;
     color: #ccf2ff;
     padding: 120px 320px 300px 380px;
+}
+
+#about-me-summary {
+    background: whitesmoke;
+    color: #0a192f;
 }
 
 section > div > p {
@@ -12,6 +18,7 @@ section > div > p {
 
 section .heading {
     font-size: 30px;
+    font-weight: 600;
     color: orange;
 }
 
@@ -48,6 +55,15 @@ section .heading {
     font-size: 20px;
     width: 20%;
     line-height: 2;
+}
+.skills ul {
+    list-style: none;
+}
+.skills ul li:before {
+    color: #00bfff;
+    content: '\25B7';
+    padding-right: 1em;
+    font-weight: 900;
 }
 
 /*.scroll {*/
