--- a/src/components/Short-Intro/ShortIntro.css
+++ b/src/components/Short-Intro/ShortIntro.css
@@ -1,5 +1,3 @@
-
-
 .intro {
     display: flex;
     flex-direction: row;
@@ -7,6 +5,11 @@
 
 .intro div {
     padding: 10px;
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
 }
 
 #my-pic img {
