--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .App {
-  /*text-align: center;*/
   height: 100%;
-  background: #0a192f;
+  /* background: #0a192f; */
+  /* background: #09162a; */
+  background: black;
 }
 
 .App-logo {
@@ -38,3 +39,67 @@
     transform: rotate(360deg);
   }
 }
+
+
+/*@media screen and (max-width: 800px){
+  .show-menu, .hide-menu {
+    display: block;
+  }
+
+  !**
+   * On resizing the browser
+   *!
+
+  .App {
+    width: 100%;
+    font-size: 8px;
+  }
+
+  #my-pic img {
+    width: 300px !important;
+    height: auto !important; !* to maintain aspect ratio *!
+    filter: grayscale(1);
+    margin-left: 200px !important;
+    maring-top: -500px !important;
+  }
+
+  header {
+    width: 100%;
+  }
+
+  section {
+    width: 100%;
+    padding: 100px !important;
+  }
+
+  section .widthh {
+    width: 100%;
+  }
+
+  nav {
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    right: -100%;
+    text-align: center;
+    padding: 80px 0;
+    line-height: normal;
+    transition: 0.7s;
+  }
+
+  nav a {
+    display: block;
+    padding: 20px;
+  }
+
+  .hide-menu {
+    position: absolute;
+    top: 40px;
+    right: 40px;
+  }
+
+  #chk:checked ~ .menu {
+    right: 0;
+  }
+}*/
