--- a/src/components/Short-Intro/ShortIntro.css
+++ b/src/components/Short-Intro/ShortIntro.css
@@ -13,7 +13,8 @@
 }
 
 #my-pic img {
-    width: 370px;
+    width: 469px;
     height: auto; /* to maintain aspect ratio */
-    filter: grayscale(1);
+    /* filter: grayscale(1); */
+    border-radius: 100%;
 }
